# sample-detection

./: .gitignore  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  sample_detection.detect.embedding_generators.wav2clip.rst  sample_detection.detect.rst  sample_detection.model.rst  sample_detection.rst  sample_detection.scrape.rst
sample_detection/: cli.py  detect.py
sample_detection/detect/: __init__.py  audio.py  embedding_generators.py  mlp.py  sample_detector.py  sample_loader.py
sample_detection/detect/embedding_generators/: base.py
sample_detection/load/: scraper.py
sample_detection/model/: audio.py  embedding_generators.py  model.py  sample_loader.py
sample_detection/scrape/: base.py  load.py  scraper.py  whosampled.py  youtube.py
sample_detection/scraper/: scraper.py  whosampled.py  youtube.py
scripts/: datapacks.py  performance-evaluation.py  test-emb-gen.py
tests/: conftest.py
tests/detect/: conftest.py  test_audio.py  test_embedding_generators.py  test_sample_detector.py
tests/scrape/: conftest.py  test_load.py  test_scraper.py  test_whosampled.py  test_youtube.py
tests/test_files/sample-details/: sample_details.csv  sample_details_bad.csv
tests/test_files/whosampled_html/: sample.html  sample_list.html
tests/unit/detect/: test_audio.py  test_embedding_generators.py  test_sample_detector.py  test_sample_loader.py
tests/unit/detector/: test_sample_detector.py
tests/unit/load/: test_load_sample_info.py
tests/unit/model/: conftest.py  (+5 more)
(+12 files in other folders)
