[metadata]
name = sample-detection
version = 0.1.0

[options]
packages = sample_detection
install_requires = 
    beautifulsoup4==4.11.1
    click==8.1.3
    ffmpeg==1.4
    ffmpeg_python==0.2.0
    librosa==0.8.0
    numpy==1.19.5
    pandas==1.4.1
    scikit_learn==1.1.1
    torch==1.11.0
    wav2clip==0.1.0
    yt-dlp==2022.5.18


[options.entry_points]
console_scripts =
    sample-detection = sample_detection.cli:cli